feat: Add commercial distribution packaging and scripts

--- a/dist_new/config.json
+++ b/dist_new/config.json
@@ -2,7 +2,7 @@
     "company_name": "Digital Insurgent Media",
     "address": "3101 Elmwood Ave",
     "city": "Oklahoma City ",
-    "country": "USA",
+    "country": "Oklahoma (US) ",
     "phone": "405-345-1993",
     "email": "blake3306@proton.me",
     "website": "digital-insurgent-media.com",
